--- a/page1.html
+++ b/page1.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>This is page1</p>
-<script src="./fetchPost.js"></script>
+<script src="./ctfetchPost1.js"></script>
 </body>
 </html>
