--- a/page1.html
+++ b/page1.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+	<head>
+	 <meta http-equiv="Access-Control-Allow-Origin" content="https://alex4150.github.io">
+	</head>
 <body>
 <h1>Hello World</h1>
 <p>This is page1</p>
