--- a/page1.html
+++ b/page1.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>This is page1</p>
-<script src="./ctfetchPost1.js"></script>
+<script type="text/javascript" src="./ctfetchPost1.js"></script>
 </body>
 </html>
