--- a/midea/mypromo.html
+++ b/midea/mypromo.html
@@ -102,6 +102,7 @@ html,body {
 
 <div class="ct-widget" data-widget-id="14702" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/activity-list/14702"></div>
 
+<div class="ct-widget" data-widget-id="17904" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/activity-list/17904"></div>
 
 <div class="ct-widget" data-widget-id="14690" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/activity-list/14690"></div>
 
