--- a/midea/mypromo.html
+++ b/midea/mypromo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML 5 Boilerplate</title>
+    <title>MIDEA Example</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://resources.crowdtwist.com/v259/widgets/javascripts/widgets-sdk.0.3.0.js"></script>
       
@@ -57,11 +57,12 @@ html,body {
 <table style="height: 80px; width: 80%; border-collapse: collapse; background-color: #115283; margin-left: auto; margin-right: auto;" border="0">
 <tbody>
 <tr>
-<td class="trtext" style="width: 12.5%;"><span style="color: #ffffff;"><img src="https://static.wixstatic.com/media/7cb23d_15d0a915390940c38911e4c2dd3548d9~mv2.png/v1/fill/w_211,h_65,al_c,q_85,usm_0.66_1.00_0.01/ALLEASYLOGO-02.webp" alt="ALLEASYLOGO-02.png" style="width:211px;height:65px;object-fit:fill"></span></td>
+<!-- <td class="trtext" style="width: 12.5%;"><span style="color: #ffffff;"><img src="https://static.wixstatic.com/media/7cb23d_15d0a915390940c38911e4c2dd3548d9~mv2.png/v1/fill/w_211,h_65,al_c,q_85,usm_0.66_1.00_0.01/ALLEASYLOGO-02.webp" alt="ALLEASYLOGO-02.png" style="width:211px;height:65px;object-fit:fill"></span></td>
+ -->
 <td class="trtext" style="width: 12.5%;"><span style="color: #ffffff;">Home</span></td>
 <td class="trtext" style="width: 12.5%;"><span style="color: #ffffff;">Getting Started</span></td>
 <td class="trtext" style="width: 12.5%;"><span style="color: #ffffff;">Promos</span></td>
-<td class="trtext" style="width: 12.5%;"><span style="color: #ffffff;">What's in AllEasy?</span></td>
+<td class="trtext" style="width: 12.5%;"><span style="color: #ffffff;">What's in MIDEA?</span></td>
 <td class="trtext" style="width: 12.5%;"><span style="color: #ffffff;">Partners</span></td>
 <td class="trtext" style="width: 12.5%;"><span style="color: #ffffff;">Customer Support</span></td>
 </tr>
@@ -100,9 +101,9 @@ html,body {
 	</tr>  
 </table> 
 
-<div class="ct-widget" data-widget-id="14702" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/activity-list/14702"></div>
-
 <div class="ct-widget" data-widget-id="17904" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/activity-list/17904"></div>
+
+<!-- <div class="ct-widget" data-widget-id="14702" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/activity-list/14702"></div> -->
 
 <div class="ct-widget" data-widget-id="14690" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/activity-list/14690"></div>
 
