--- a/midea/mypromo.html
+++ b/midea/mypromo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>MIDEA Example</title>
+    <title>PJLH Example</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://resources.crowdtwist.com/v259/widgets/javascripts/widgets-sdk.0.3.0.js"></script>
       
@@ -62,7 +62,7 @@ html,body {
 <td class="trtext" style="width: 12.5%;"><span style="color: #ffffff;">Home</span></td>
 <td class="trtext" style="width: 12.5%;"><span style="color: #ffffff;">Getting Started</span></td>
 <td class="trtext" style="width: 12.5%;"><span style="color: #ffffff;">Promos</span></td>
-<td class="trtext" style="width: 12.5%;"><span style="color: #ffffff;">What's in MIDEA?</span></td>
+<td class="trtext" style="width: 12.5%;"><span style="color: #ffffff;">What's in Store?</span></td>
 <td class="trtext" style="width: 12.5%;"><span style="color: #ffffff;">Partners</span></td>
 <td class="trtext" style="width: 12.5%;"><span style="color: #ffffff;">Customer Support</span></td>
 </tr>
@@ -101,7 +101,8 @@ html,body {
 	</tr>  
 </table> 
 
-<div class="ct-widget" data-widget-id="17904" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/activity-list/17904"></div>
+<div class="ct-widget" data-widget-id="13568" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/survey/13568"></div>
+<!-- <div class="ct-widget" data-widget-id="17904" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/activity-list/17904"></div> -->
 
 <!-- <div class="ct-widget" data-widget-id="14702" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/activity-list/14702"></div> -->
 
