--- a/pjlh/mypromo.html
+++ b/pjlh/mypromo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>PJLH Example</title>
+    <title>CrowdTwist Example</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://resources.crowdtwist.com/v259/widgets/javascripts/widgets-sdk.0.3.0.js"></script>
       
@@ -102,17 +102,10 @@ html,body {
 </table> 
 
 <div class="ct-widget" data-widget-id="13568" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/survey/13568"></div>
-<!-- <div class="ct-widget" data-widget-id="17904" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/activity-list/17904"></div> -->
 
-<!-- <div class="ct-widget" data-widget-id="14702" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/activity-list/14702"></div> -->
 
 <div class="ct-widget" data-widget-id="14690" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/activity-list/14690"></div>
 
-<!--<div class="ct-widget" data-widget-id="14582" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/activity-list/14582"></div>
-<div class="ct-widget" data-widget-id="14584" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/activity-list/14584"></div>
-<div class="ct-widget" data-widget-id="14586" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/activity-list/14586"></div>
-
---> 
 
 <table style="width:100%">
         <tr style="background-color:#396b8f">
@@ -125,7 +118,6 @@ html,body {
 </table> 
 
 <div class="ct-widget" data-widget-id="14692" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/reward-list/14692"></div>
-<!--<div class="ct-widget" data-widget-id="14590" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/reward-list/14590"></div> --> 
 
 
 <table style="width:100%">
@@ -138,7 +130,9 @@ html,body {
                 </td>
         </tr>  
 </table> 
+
 <div class="ct-widget" data-widget-id="14554" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/activity-history/14554"></div>
+
 <table style="width:100%">
         <tr style="background-color:#396b8f">
                 <td>
@@ -160,6 +154,3 @@ html,body {
 
   </body>
 </html>
-
-
-
