--- a/pjlh/mypromo.html
+++ b/pjlh/mypromo.html
@@ -81,12 +81,11 @@ html,body {
 
 
 
+<!-- 	<script src="index.js"></script> -->
 
-
-
-	<script src="index.js"></script>
 <!-- INSERT CT CODE HERE --> 
 <!--  ADD CUSTOM CODE HERE--> 
+
 <div class="wrapper"> 
 
 <div class="ct-widget" data-widget-id="14578" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/account-overview/14578"></div>
